# gitblog2

./: .gitignore  .gomplate.yaml  .init.lua  .pylintrc  404.html  Dockerfile  LICENSE.md  Makefile  README.md  docker-entrypoint.sh  gen_blog.sh  git-blog.sh  index.html  index.md  live-build.sh  main.py  main.sh  mkdocs.yml  pyproject.toml  release.sh  requirements.txt  utils.py
.github/workflows/: docker-image.yml  documentation.yml
articles/: a-minimalist-blog.md
creating-your-blog/: index.html
css/: layout.css  layout.scss  style.css  style.scss  theme.css  themes.css
development-quickstart/: index.html
docs/: creating-your-blog.md  development-quickstart.md  index.md  publishing-your-blog.md
example/: Dockerfile  water.css
example/articles/: example.md
example/tech/: example.md
gitblog2/: __init__.py  blog_posts.py  cli.py  lib.py  repo_utils.py  test_cli.py
gitblog2/css/: layout.css  theme.css
gitblog2/templates/: article.html.j2  article_datetimes.html.j2  head_common.html.j2  index.html.j2  navbar.html.j2
gitblog2/tests/: test_e2e.py
gitblog2/tests/example_output/: index.html
gitblog2/tests/example_output/tech/: example.html  index.html
providers/: cloudflare-pages.sh  post-css.sh  redbean.sh
providers/assets/: .init.lua
publishing-your-blob/: index.html
publishing-your-blog/: index.html
search/: search_index.json
stylesheets/: extra.css
templates/: article.html.j2  article.tmpl.html  default.tmpl.html  footer.html.j2  head_common.html.j2  index.html.j2  navbar.html.j2
typings/feedgen/: entry.pyi  feed.pyi
typings/pygit2/: __init__.pyi  _build.pyi  _pygit2.pyi  _run.pyi  blame.pyi  callbacks.pyi  config.pyi  credentials.pyi  errors.pyi  index.pyi  packbuilder.pyi  refspec.pyi  remote.pyi  repository.pyi  settings.pyi  submodule.pyi  utils.pyi
